# Advanced-Computing-for-Finance

./: CMakeLists.txt  README.md  hpla_O0  hpla_O3  hpla_profile  hpla_profile_block_opt  hpla_profile_naive  hpla_profile_transposed
hpla_profile.dSYM/Contents/: Info.plist
hpla_profile.dSYM/Contents/Resources/DWARF/: hpla_profile
hpla_profile.dSYM/Contents/Resources/Relocations/aarch64/: hpla_profile.yml
hpla_profile_block_opt.dSYM/Contents/: Info.plist
hpla_profile_block_opt.dSYM/Contents/Resources/DWARF/: hpla_profile_block_opt
hpla_profile_block_opt.dSYM/Contents/Resources/Relocations/aarch64/: hpla_profile_block_opt.yml
hpla_profile_naive.dSYM/Contents/: Info.plist
hpla_profile_naive.dSYM/Contents/Resources/DWARF/: hpla_profile_naive
hpla_profile_naive.dSYM/Contents/Resources/Relocations/aarch64/: hpla_profile_naive.yml
hpla_profile_transposed.dSYM/Contents/: Info.plist
hpla_profile_transposed.dSYM/Contents/Resources/DWARF/: hpla_profile_transposed
hpla_profile_transposed.dSYM/Contents/Resources/Relocations/aarch64/: hpla_profile_transposed.yml
includes/: aligned_memory.h  baseline.h  baseline_tests.h  benchmark.h  optimized.h  profile_mm_naive.h  profile_mm_transposed.h
src/: HPLA.cpp  aligned_memory.cpp  baseline.cpp  baseline_tests.cpp  benchmark.cpp  main.cpp  optimized.cpp  profile_mm_naive.cpp  profile_mm_transposed.cpp
